Employee-Service Ready

--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -6,5 +6,9 @@ spring.datasource.password=root
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
+#application name
 spring.application.name=employee-service
+
+#context : which we have to add before end-point
+server.servlet.context-path=/employee-app/api
 server.port=8080
