microservice-communication[RestTemplate]

--- a/microservice-communication[RestTemplate]/employee-service/src/main/resources/application.properties
+++ b/microservice-communication[RestTemplate]/employee-service/src/main/resources/application.properties
@@ -9,6 +9,9 @@ spring.datasource.password=root
 #application name
 spring.application.name=employee-service
 
+#Base-url for address
+addresservice.base.url=http://localhost:8081/address-app/api
+
 #context : which we have to add before end-point
 server.servlet.context-path=/employee-app/api
 server.port=8080
