microservice-communication [ RestTemplate ]

--- a/microservice-communication[RestTemplate]/employee-service/src/main/resources/application.properties
+++ b/microservice-communication[RestTemplate]/employee-service/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.password=root
 #application name
 spring.application.name=employee-service
 
-#Base-url for address
+#Base-url for call address-service into employee-service
 addresservice.base.url=http://localhost:8081/address-app/api
 
 #context : which we have to add before end-point
